--- a/Ancestry.Web/Ancestry.Web.csproj
+++ b/Ancestry.Web/Ancestry.Web.csproj
@@ -89,6 +89,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Ancestry.mdf" />
+    <Content Include="App_Data\Ancestry_log.ldf">
+      <DependentUpon>Ancestry.mdf</DependentUpon>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -110,7 +114,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
