--- a/Ancestry.Web/Web.config
+++ b/Ancestry.Web/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="Ancestry" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\X162335\Source\Repos\Ancestry\Ancestry\Ancestry.Web\App_Data\Ancestry.mdf;Integrated Security=True"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
