--- a/Ancestry.Data/Ancestry.Data.csproj
+++ b/Ancestry.Data/Ancestry.Data.csproj
@@ -78,11 +78,22 @@
     <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ApplicationConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryImplementation\AccountRepository.cs" />
     <Compile Include="RepositoryImplementation\RepositoryManager.cs" />
     <Compile Include="RepositoryInterface\IRepositoryManager.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Ancestry.DB\Ancestry.DB.csproj">
+      <Project>{2b049bed-ec72-49c1-b921-0afb6f07f9da}</Project>
+      <Name>Ancestry.DB</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ancestry.Models\Ancestry.Models.csproj">
+      <Project>{83c6526f-86f9-4412-b8b3-355514db911b}</Project>
+      <Name>Ancestry.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
